--- a/index.html
+++ b/index.html
@@ -4,98 +4,111 @@
 <!-- browser tab head  -->
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Qihong Lu | Princeton University</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>Qihong Lu | Princeton University</title>
+  <link rel="stylesheet" href="stylesheets/styles.css">
+  <link rel="stylesheet" href="stylesheets/github-light.css">
+  <meta name="viewport" content="width=device-width">
+  <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
 
-    <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-83024954-2', 'auto');
-        ga('send', 'pageview');
-    </script>
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-83024954-2', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
 
 <!-- the main body  -->
 
 <body>
-<div class="wrapper">
+  <div class="wrapper">
 
-<!-- the left column  -->
+    <!-- the left column  -->
 
-<header>
-    <h1>Qihong Lu</h1>
-    <br>
+    <header>
+      <h1>Qihong Lu</h1>
+      <br>
 
-    <p class="view"><h4>Home</h4></p>
-    <p class="view"><a href="research.html"><h4>Research</h4></a></p>
-    <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>
-<!--     <p class="view"><a href="resources.html"><h4>Resources</h4></a></p> -->
-    <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
-    <br><br>
+      <p class="view">
+        <h4>Home</h4>
+      </p>
+      <p class="view"><a href="research.html">
+          <h4>Research</h4>
+        </a></p>
+      <p class="view">
+        <h4><a href="teaching.html">Teaching</a></h4>
+      </p>
+      <!--     <p class="view"><a href="resources.html"><h4>Resources</h4></a></p> -->
+      <p class="view"><a href="contact.html">
+          <h4>Contact</h4>
+        </a></p>
+      <br><br>
 
-    <p class="view">
-    <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
-    <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
-    <a href="https://twitter.com/Qihong_Lu">
-    <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
-    </p>
+      <p class="view">
+        <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
+          <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
+        <a href="https://twitter.com/Qihong_Lu">
+          <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
+      </p>
 
-    <p class="view">
-    <a href="https://github.com/QihongL">
-    <img src="imgs/logo/github.svg" alt="github" width=40px></a>
-    <a href="mailto:qlu@princeton.edu" target="_top">
-    <img src="imgs/logo/email.png" alt="email" width=40px></a>
-    </p>
+      <p class="view">
+        <a href="https://github.com/QihongL">
+          <img src="imgs/logo/github.svg" alt="github" width=40px></a>
+        <a href="https://www.instagram.com/lu.qihong/">
+          <img src="imgs/logo/instagram.png" alt="github" width=40px></a>
+      </p>
 
-</header>
+      <!-- <p class="view">
+        <a href="mailto:qlu@princeton.edu" target="_top">
+          <img src="imgs/logo/email.png" alt="email" width=40px></a>
+      </p> -->
 
-<!-- the END of left column  -->
+    </header>
 
-<!-- the right column  -->
+    <!-- the END of left column  -->
 
-<section>
+    <!-- the right column  -->
 
-<h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-<strong>Welcome to my personal webpage!</strong>
-</h3>
+    <section>
 
-<br>
-<center>
-    <p style="width: 500px;"><img src="/imgs/myPics/me_slc.png"></p>
-</center>
+      <h3>
+        <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+        <strong>Welcome to my personal webpage!</strong>
+      </h3>
 
-<p>
-Hi, my name is Qihong Lu.
-I'm a grad student with
-<a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
-and
-<a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
-at Princeton.
-I'm working on computational models of episodic memory.
-Here's my
-<a href="docs/CV_QL.pdf">CV</a>.
+      <br>
+      <center>
+        <p style="width: 500px;"><img src="/imgs/myPics/me_slc.png"></p>
+      </center>
 
-<br>
-I'm organizing the
-<a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a>,
-feel free to contact me if you would like to give a talk.
+      <p>
+        Hi, my name is Qihong Lu.
+        I'm a grad student with
+        <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
+        and
+        <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
+        at Princeton.
+        I'm working on models of episodic memory.
+        Here's my
+        <a href="docs/CV_QL.pdf">CV</a>.
 
-<!-- a weekly meeting on neural/cognitive computational models.
+        <br>
+        I'm organizing the
+        <a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a>,
+        feel free to contact me if you would like to give a talk.
+
+        <!-- a weekly meeting on neural/cognitive computational models.
 Feel free to contact me if you (including external speakers) would like to ...
     <ul>
     <li>join the mailing list</li>
@@ -104,10 +117,10 @@ Feel free to contact me if you (including external speakers) would like to ...
     <li>anything PDP related!</li>
 </ul> -->
 
-</section>
+    </section>
 
-</div>
-<script src="javascripts/scale.fix.js"></script>
+  </div>
+  <script src="javascripts/scale.fix.js"></script>
 
 </body>
 
