--- a/teaching.html
+++ b/teaching.html
@@ -4,234 +4,240 @@
 <!-- browser tab head  -->
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Qihong Lu | Princeton University</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>Qihong Lu | Princeton University</title>
+  <link rel="stylesheet" href="stylesheets/styles.css">
+  <link rel="stylesheet" href="stylesheets/github-light.css">
+  <meta name="viewport" content="width=device-width">
+  <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
 
-    <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-83024954-2', 'auto');
-        ga('send', 'pageview');
-    </script>
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-83024954-2', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
 
 <!-- the main body  -->
 
 <body>
-    <div class="wrapper">
+  <div class="wrapper">
 
-        <!-- the left column  -->
+    <!-- the left column  -->
 
-        <header>
-            <h1>Qihong Lu</h1>
-            <br>
+    <header>
+      <h1>Qihong Lu</h1>
+      <br>
 
-            <p class="view">
-                <h4><a href="index.html">Home</a></h4>
-            </p>
-            <p class="view">
-                <h4><a href="research.html">Research</a></h4>
-            </p>
-            <p class="view">
-                <h4>Teaching</h4>
-            </p>
-            <!-- <p class="view"><a href="resources.html">
+      <p class="view">
+        <h4><a href="index.html">Home</a></h4>
+      </p>
+      <p class="view">
+        <h4><a href="research.html">Research</a></h4>
+      </p>
+      <p class="view">
+        <h4>Teaching</h4>
+      </p>
+      <!-- <p class="view"><a href="resources.html">
                     <h4>Resources</h4>
                 </a></p> -->
-            <p class="view">
-                <h4><a href="contact.html">Contact</a></h4>
-            </p>
-            <br><br>
+      <p class="view">
+        <h4><a href="contact.html">Contact</a></h4>
+      </p>
+      <br><br>
 
-            <p class="view">
-                <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
-                    <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
-                <a href="https://twitter.com/Qihong_Lu">
-                    <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
-            </p>
+      <p class="view">
+        <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
+          <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
+        <a href="https://twitter.com/Qihong_Lu">
+          <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
+      </p>
 
-            <p class="view">
-                <a href="https://github.com/QihongL">
-                    <img src="imgs/logo/github.svg" alt="github" width=40px></a>
-                <a href="mailto:qlu@princeton.edu" target="_top">
-                    <img src="imgs/logo/email.png" alt="email" width=40px></a>
-            </p>
-        </header>
+      <p class="view">
+        <a href="https://github.com/QihongL">
+          <img src="imgs/logo/github.svg" alt="github" width=40px></a>
+        <a href="https://www.instagram.com/lu.qihong/">
+          <img src="imgs/logo/instagram.png" alt="github" width=40px></a>
+      </p>
 
-        <!-- the END of left column  -->
+      <!-- <p class="view">
+        <a href="mailto:qlu@princeton.edu" target="_top">
+          <img src="imgs/logo/email.png" alt="email" width=40px></a>
+      </p> -->
 
-        <!-- the right column  -->
+    </header>
 
-        <section>
+    <!-- the END of left column  -->
 
-            <h3>
-                <p> <strong>Courses</strong></p>
-            </h3>
+    <!-- the right column  -->
 
-            <p>
-                <strong>Spring 2019, NEU | PSY 330: Computational Modeling of Psychological Function</strong>
-                <br>
-                &emsp;
-                <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=005628&term=1194">offcial course description</a>
-                |
-                <a href="https://github.com/PrincetonUniversity/PsyNeuLink">psyneulink</a>
-                <br>
-                <br>
+    <section>
 
-                Here're some demos. Most of them are on google colab. Let me know if you have trouble running any of them.
-                <ul>
-                    <li>
-                        Constraint satisfaction network, the <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>
-                        <br>
-                        code: <a href="https://github.com/qihongl/demo-necker-cube">psyneulink</a>
-                    </li>
+      <h3>
+        <p> <strong>Courses</strong></p>
+      </h3>
 
-                    <li>
-                        The hopfield network, pattern completion
-                        <br>
-                        code: <a href="https://github.com/qihongl/demo-hopfield-network">numpy</a>
-                    </li>
+      <p>
+        <strong>Spring 2019, NEU | PSY 330: Computational Modeling of Psychological Function</strong>
+        <br>
+        &emsp;
+        <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=005628&term=1194">offcial course description</a>
+        |
+        <a href="https://github.com/PrincetonUniversity/PsyNeuLink">psyneulink</a>
+        <br>
+        <br>
 
-                    <li>
-                        Temporal difference learning,
-                        <a href="https://en.wikipedia.org/wiki/Second-order_conditioning">higher order conditioning</a>
-                        <br>
-                        code: <a href="https://github.com/qihongl/demo-td">numpy</a> |
-                        <a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">slides
-                        </a>
-                    </li>
+        Here're some demos. Most of them are on google colab. Let me know if you have trouble running any of them.
+        <ul>
+          <li>
+            Constraint satisfaction network, the <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>
+            <br>
+            code: <a href="https://github.com/qihongl/demo-necker-cube">psyneulink</a>
+          </li>
 
-                    <li>
-                        Q-learning with function approximation, grid world navigation
-                        <br>
-                        code: <a href="https://github.com/qihongl/demo-q-learning">pytorch and numpy</a>
-                    </li>
+          <li>
+            The hopfield network, pattern completion
+            <br>
+            code: <a href="https://github.com/qihongl/demo-hopfield-network">numpy</a>
+          </li>
 
-                    <!-- <li>
+          <li>
+            Temporal difference learning,
+            <a href="https://en.wikipedia.org/wiki/Second-order_conditioning">higher order conditioning</a>
+            <br>
+            code: <a href="https://github.com/qihongl/demo-td">numpy</a> |
+            <a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">slides
+            </a>
+          </li>
+
+          <li>
+            Q-learning with function approximation, grid world navigation
+            <br>
+            code: <a href="https://github.com/qihongl/demo-q-learning">pytorch and numpy</a>
+          </li>
+
+          <!-- <li>
                         Advantage actor critic, some openAI gym environment
                         <br>
                         code: <a href="https://github.com/qihongl/demo-advantage-actor-critic">pytorch</a>
                     </li> -->
 
-                    <li>
-                        Recurrent neural network, statistical learning
-                        <br>
-                        code: <a href="https://github.com/qihongl/demo-elman-1990">pytorch and psyneulink</a>
-                    </li>
-
-                    <li>
-                        The leaky competing accumulator by
-                        <a href="https://www.ncbi.nlm.nih.gov/pubmed/11488378">Usher & McClelland (2001)</a>
-                        <br>
-                        code: <a href="https://github.com/qihongl/pylca">numpy</a>,
-                        <a href="https://github.com/qihongl/demo-lca">psyneulink</a>
-                    </li>
-
-                    <li>
-                        The stroop model, qualitative replicate <a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">Cohen et al (1990)</a>
-                        <br>
-                        code: <a href="https://github.com/qihongl/stroop-cohen-etal-1990">psyneulink</a> |
-                        <a href="https://docs.google.com/presentation/d/1uG9LVT5susIOUvRCeg8qzzZNwNnwRbGPTiRGcjAyqGU/edit?usp=sharing">slides</a>
-                    </li>
-
-                    <li>
-                        A memory-augmented neural network
-                        <br>
-                        code: <a href="https://github.com/qihongl/dnd-lstm">pytorch</a>
-                    </li>
-
-                    <li>
-                        Some common nonlinearities used in neural networks
-                        <br>
-                        <a href="https://github.com/qihongl/demo-nonlinearities">demo</a>
-                    </li>
-                </ul>
-
-                <br>
-                Here're some awesome demos I found online:
-                <ul>
-                    <li>
-                        <a href="https://lecture-demo.ira.uka.de/neural-network-demo/?preset=Rosenblatt%20Perceptron">Neural network demo</a>: perceptron, MLP, autoencoder, etc.
-                    </li>
-                    <li>
-                        <a href="https://playground.tensorflow.org/">Neural network playground</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/iRath96/som-demo">Self-organizing map</a>
-                    </li>
-                    <li>
-                        <a href="https://www.med.upenn.edu/longding1/javascript/DDM_LongDing.html">The drift diffusion model</a>
-                    </li>
-                    <li>
-                        <a href="https://cs.stanford.edu/people/karpathy/reinforcejs/index.html">REINFORCEjs</a>
-                    </li>
-
-                </ul>
-            </p>
-
-            <br><br>
-            <hr>
-
-
-            <p>
-                <strong>Fall 2018, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</strong>
-                <br>
-                &emsp;
-                <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=011565&term=1192">offcial course description</a>
-                |
-                <a href="https://github.com/NEU480/organization/wiki">class wiki</a>
-                <br>
-                <b>
-                    &emsp; The Jupyter notebooks used for the labs are publicly available
-                    <a href="https://brainiak.org/tutorials/">here</a>!
-                </b>
-            </p>
+          <li>
+            Recurrent neural network, statistical learning
             <br>
+            code: <a href="https://github.com/qihongl/demo-elman-1990">pytorch and psyneulink</a>
+          </li>
 
-            Other resources:
-            <ul>
-                <li>
-                    <a href="https://dartbrains.org/intro">Introduction to fMRI data analysis</a>, Luke Chang, Dartmouth
-                </li>
-                <li>
-                    <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>, Rebecca Saxe, MIT
-                </li>
-                <li>
-                    <a href="http://nancysbraintalks.mit.edu/">nancys braintalks</a>, Nancy Kanwisher, MIT
-                </li>
-            </ul>
-
+          <li>
+            The leaky competing accumulator by
+            <a href="https://www.ncbi.nlm.nih.gov/pubmed/11488378">Usher & McClelland (2001)</a>
             <br>
+            code: <a href="https://github.com/qihongl/pylca">numpy</a>,
+            <a href="https://github.com/qihongl/demo-lca">psyneulink</a>
+          </li>
+
+          <li>
+            The stroop model, qualitative replicate <a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">Cohen et al (1990)</a>
             <br>
-            <img src="imgs/misc/git_in_case_of_fire.png" alt="git" class="center" width="200">
+            code: <a href="https://github.com/qihongl/stroop-cohen-etal-1990">psyneulink</a> |
+            <a href="https://docs.google.com/presentation/d/1uG9LVT5susIOUvRCeg8qzzZNwNnwRbGPTiRGcjAyqGU/edit?usp=sharing">slides</a>
+          </li>
+
+          <li>
+            A memory-augmented neural network
+            <br>
+            code: <a href="https://github.com/qihongl/dnd-lstm">pytorch</a>
+          </li>
+
+          <li>
+            Some common nonlinearities used in neural networks
+            <br>
+            <a href="https://github.com/qihongl/demo-nonlinearities">demo</a>
+          </li>
+        </ul>
+
+        <br>
+        Here're some awesome demos I found online:
+        <ul>
+          <li>
+            <a href="https://lecture-demo.ira.uka.de/neural-network-demo/?preset=Rosenblatt%20Perceptron">Neural network demo</a>: perceptron, MLP, autoencoder, etc.
+          </li>
+          <li>
+            <a href="https://playground.tensorflow.org/">Neural network playground</a>
+          </li>
+          <li>
+            <a href="https://github.com/iRath96/som-demo">Self-organizing map</a>
+          </li>
+          <li>
+            <a href="https://www.med.upenn.edu/longding1/javascript/DDM_LongDing.html">The drift diffusion model</a>
+          </li>
+          <li>
+            <a href="https://cs.stanford.edu/people/karpathy/reinforcejs/index.html">REINFORCEjs</a>
+          </li>
+
+        </ul>
+      </p>
+
+      <br><br>
+      <hr>
 
 
-        </section>
+      <p>
+        <strong>Fall 2018, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</strong>
+        <br>
+        &emsp;
+        <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=011565&term=1192">offcial course description</a>
+        |
+        <a href="https://github.com/NEU480/organization/wiki">class wiki</a>
+        <br>
+        <b>
+          &emsp; The Jupyter notebooks used for the labs are publicly available
+          <a href="https://brainiak.org/tutorials/">here</a>!
+        </b>
+      </p>
+      <br>
 
-        <!-- the END of right column  -->
+      Other resources:
+      <ul>
+        <li>
+          <a href="https://dartbrains.org/intro">Introduction to fMRI data analysis</a>, Luke Chang, Dartmouth
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>, Rebecca Saxe, MIT
+        </li>
+        <li>
+          <a href="http://nancysbraintalks.mit.edu/">nancys braintalks</a>, Nancy Kanwisher, MIT
+        </li>
+      </ul>
 
-        <!-- <footer>
+      <br>
+      <br>
+      <img src="imgs/misc/git_in_case_of_fire.png" alt="git" class="center" width="200">
+
+
+    </section>
+
+    <!-- the END of right column  -->
+
+    <!-- <footer>
     <p><small>Hosted on GitHub Pages<br>
     Theme by <a href="https://github.com/orderedlist">orderedlist</a>
     </small></p>
 </footer> -->
 
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
+  </div>
+  <script src="javascripts/scale.fix.js"></script>
 
 </body>
 
